--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,13 @@
-body, ul, li, div, a, p, input[type=button], header, img, a {
+body,
+ul,
+li,
+div,
+a,
+p,
+input[type=button],
+header,
+img,
+a {
     margin: 0;
     padding: 0;
 }
