--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
     --filter-bg-color: #DEEBFF;
 }
 
-.fa-solid, .fa-regular {
+.fa-solid,
+.fa-regular {
     color: var(--main-color);
 }
 
@@ -142,7 +143,10 @@ nav {
     display: flex;
 }
 
-#location-dot-container, #search-bar, #search-button-desktop, #search-button-mobile {
+#location-dot-container,
+#search-bar,
+#search-button-desktop,
+#search-button-mobile {
     box-sizing: border-box;
     height: inherit;
     border-style: none;
@@ -150,7 +154,6 @@ nav {
 
 #location-dot-container {
     width: 50px;
-    height: inherit;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     display: flex;
@@ -167,7 +170,7 @@ nav {
     text-align: center;
     font-weight: 800;
     font-size: 17px;
-    border-bottom: 2px solid #F2F2F2;   
+    border-bottom: 2px solid #F2F2F2;
     border-top: 2px solid #F2F2F2;
     width: 183px;
 }
@@ -187,7 +190,8 @@ nav {
     display: none;
 }
 
-#search-button-desktop:hover, #search-button-mobile:hover {
+#search-button-desktop:hover,
+#search-button-mobile:hover {
     cursor: pointer;
 }
 
@@ -276,7 +280,7 @@ nav {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 15px;
 }
 
 .clickable-container {
@@ -288,7 +292,7 @@ nav {
 .accommodation-cards .card {
     min-width: 245px;
     height: 195px;
-    display: flex; 
+    display: flex;
     flex-direction: column;
 }
 
@@ -390,7 +394,8 @@ nav {
     padding-right: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;/* for flex as column it modifies vertical spacing between items */
+    justify-content: space-between;
+    /* for flex as column it modifies vertical spacing between items */
     gap: 30px;
 }
 
@@ -404,7 +409,7 @@ nav {
     width: 100%;
     height: 360px;
     border-top-left-radius: 18px;
-    border-top-right-radius: 18px;    
+    border-top-right-radius: 18px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.048);
     object-fit: cover;
 }
